# haskell-foreign-library-test

./: .gitignore  LICENSE  README.md  haskell-foreign-library-test.cabal  stack.yaml
csrc/: mylib.cpp  mylib.h
src/: Lib.hs
