cabal-version: 1.12

name:           haskell-foreign-library-test
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/masatoko/haskell-foreign-library-test#readme>
homepage:       https://github.com/masatoko/haskell-foreign-library-test#readme
bug-reports:    https://github.com/masatoko/haskell-foreign-library-test/issues
author:         masatoko
maintainer:     masatokodo@gmail.com
copyright:      2020 masatoko
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/masatoko/haskell-foreign-library-test

library
  -- exposed-modules:
  --     Lib
  -- other-modules:
  --     Paths_haskell_foreign_library_test
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

foreign-library mylib
  type:
      native-shared

  if os(Windows)
    options: standalone
  
  other-modules:
      Lib
  build-depends:
      base >=4.7 && <5
  hs-source-dirs:
      src
  default-language: Haskell2010
